ajout du numero 3

--- a/question9.html
+++ b/question9.html
@@ -9,11 +9,11 @@
 <body>
     <script>
         let n = prompt("votre chiffre");
-        let html = ""
+        let multiplication = ""
         for (let i = 1; i<= 10; i++){
-            html = html + n + ' x ' + i + ' = ' + (n*i) + '<br/>'
+            multiplication = multiplication + n + ' x ' + i + ' = ' + (n*i) + '<br/>'
         }
-        document.body.innerHTML= html 
+        document.body.innerHTML= multiplication
     </script>
     
 </body>
