--- a/question10/index.html
+++ b/question10/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-  <script src="main.Js"></script>  
+<script src="main10.js"></script>  
 </body>
 </html>
