--- a/question12/index.html
+++ b/question12/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-  <script src="main.Js"></script>  
+ <script src="main12.js"></script>   
 </body>
 </html>
